# job-applier

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
backend/: pyproject.toml
backend/src/job_applier/: config.py  main.py
backend/src/job_applier/models/: application.py  chat.py  document.py  job.py  skill.py
backend/src/job_applier/prompts/: extraction.py  generation.py  matching.py
backend/src/job_applier/routers/: applications.py  chat.py  generate.py  jobs.py  library.py  matching.py  skills.py
backend/src/job_applier/services/: extractor.py  generator.py  llm.py  matcher.py  parser.py  storage.py  usage.py
backend/src/job_applier/services/providers/: anthropic.py  base.py  openai.py
backend/src/job_applier/templates/: document.html
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/chat/: ChatWindow.tsx
frontend/src/components/generate/: DocumentPreview.tsx  GeneratePanel.tsx
frontend/src/components/jobs/: JobDetails.tsx  JobInput.tsx
frontend/src/components/matching/: SkillMatch.tsx
frontend/src/pages/: ApplicationPage.tsx  DashboardPage.tsx  LibraryPage.tsx  NewApplicationPage.tsx  SkillsPage.tsx  TrackingPage.tsx
frontend/src/types/: index.ts
tasks/: todo.md
